# skill-network

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  diesel.toml  docker-compose.yml
CLionConfigurations/: CI.run.xml  Clippy Backend.run.xml  Clippy Frontend.run.xml  Format Backend.run.xml  Format Frontend.run.xml  Run Backend.run.xml  Run Frontend.run.xml  Run.run.xml
backend/: .env  Cargo.toml  Rocket.toml  test.db
backend/migrations/2021-04-22-134115_employees/: down.sql  up.sql
backend/migrations/2021-04-23-125659_skills/: down.sql  up.sql
backend/migrations/2021-04-23-130514_employees_skills/: down.sql  up.sql
backend/src/: main.rs  people.xlsx  result.rs
backend/src/api/: employee.rs  employee_skill.rs  mod.rs  skill.rs
backend/src/database/: mod.rs  sanitize_search_string.rs  schema.rs
backend/src/database/models/: employee.rs  employee_skill.rs  mod.rs  skill.rs
frontend/: Cargo.toml  Dockerfile  package.json  webpack.config.js
frontend/css/: custom.css
frontend/favicons/: site.webmanifest
frontend/src/: lib.rs
frontend/src/page/: about.rs  employee.rs  home.rs  mod.rs  not_found.rs  skill.rs
frontend/src/page/common/: backend_structs.rs  mod.rs  model.rs  search_bar.rs  visibility.rs
frontend/src/page/partial/: footer.rs  header.rs
frontend/static/templates/: favicons.hbs  loading_page.hbs  social_media.hbs
