[package]
name = "backend"
version = "0.1.0"
authors = ["sousajo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dotenv = "0.15.0"
serde = "1.0.117"
rocket_cors = { version = "0.5.0", default-features = false }
serde_derive = "1.0.117"
rand = "0.8.0"
calamine = "0.18.0"
libsqlite3-sys = { version = "0.17.3", features = ["bundled"] }

[dependencies.diesel]
version = "1.4.5"
features = ["sqlite"]

[dependencies.rocket]
version = "0.4.7"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]