[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/sousajf1/skill-network"
authors = ["sousajf1@protonmail.ch, luizchagasjardim@gmail.com"]
description = "Skill Network based on seed-quickstart-webpack"
categories = ["wasm", "rust", "tailwindcss", "seed", "personal", "website"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
wasm-bindgen = "0.2.73"

[dependencies]
seed = "0.8.0"
fixed-vec-deque = "0.1.9"
console_error_panic_hook = "0.1.6"
serde = "1.0.117"
serde_derive = "1.0.117"
# seed_style = { package = "seed_style_preview", version = "0.1.7" } // this could be good if it matures

[dependencies.web-sys]
version = "0.3.45"
features = [
  "ScrollToOptions",
  "Navigator",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
